--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.0",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
+    "react-datepicker": "^4.14.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0-next.1",
     "react-redux": "^8.1.0",
@@ -49,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-datepicker": "^4.11.2"
   }
 }
