--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.8",
     "react": "^18.2.0",
     "react-datepicker": "^4.14.0",
     "react-dom": "^18.2.0",
@@ -22,6 +23,7 @@
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.3",
     "redux-persist": "^6.0.0",
     "sass": "^1.63.4",
     "typescript": "^4.9.5",
@@ -52,10 +54,10 @@
     ]
   },
   "devDependencies": {
-    "@types/react-datepicker": "^4.11.2",
     "@babel/core": "7.22.5",
     "@babel/eslint-parser": "7.22.5",
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
-    "@babel/preset-env": "7.22.5"
+    "@babel/preset-env": "7.22.5",
+    "@types/react-datepicker": "^4.11.2"
   }
 }
