--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "react-datepicker": "^4.14.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0-next.1",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
+    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "sass": "^1.63.4",
     "typescript": "^4.9.5",
@@ -58,6 +60,7 @@
     "@babel/eslint-parser": "7.22.5",
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@babel/preset-env": "7.22.5",
-    "@types/react-datepicker": "^4.11.2"
+    "@types/react-datepicker": "^4.11.2",
+    "@types/react-input-mask": "^3.0.2"
   }
 }
