--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "payment_approval_front",
+  "homepage": "http://finance.safiabakery.uz",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
