--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "sync": "aws s3 sync --profile '' ./build 's3://finance.safiabakery.uz",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
