--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "bootstrap": "^5.3.0",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.8",
+    "eslint-config-standard": "^17.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0-next.1",
     "react-input-mask": "^2.0.4",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
